--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你</span><br>
+                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的kk，我爱你</span><br>
                       <span class="say"> 我知道我不会甜言蜜语，</span><br>
                       <span class="say"> 但是我会用行动证明一切</span><br>
-                      <span class="say">你说我啰嗦，</span><br>             
-                          <span class="say"> 有些东西因为越在乎所以越怕失去</span><br>
-                      <span class="say">因为我太爱你了，所以我害怕失去你</span><br>
-                      <span class="say">因为我太爱你了，所以我对你总啰嗦</span><br>
-                      <span class="say">希望可以执子之手，与子偕老</span><br>
-                      <span class="say">如果上天让我许三个愿望，</span><br>
-                              <span class="say">第一个是今生今世和你在一起， </span><br>
-                           <span class="say"> 第二个是再生再世和你在一起，</span><br>
-                           <span class="say">第三个是永生永世和你不分离 </span><br>
-                      <span class="say"><span class="space"></span> -- 爱你的老公</span> </font>
+                      <span class="say">都说陪伴是最长情的告白，</span><br>             
+                          <span class="say"> 守护是最沉默的陪伴</span><br>
+                      <span class="say">在关注你的那一刻，就决定要守护你</span><br>
+                      <span class="say">也说过会一直陪着你，而我没有食言</span><br>
+                      <span class="say">从最开始陪你到了现在</span><br>
+                      <span class="say">有一种酒一点点就能醉人，</span><br>
+                              <span class="say">有一种爱一点点就能温馨， </span><br>
+                           <span class="say"> 有一个你一相识就难以忘怀，</span><br>
+                           <span class="say">有一种心就算不曾见面也会彼此挂念，直至永远 </span><br>
+                      <span class="say"><span class="space"></span> -- 爱你的77</span> </font>
                           <br />
                           <br />
                       </p>
@@ -182,11 +182,11 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2010,1 , 15); 			//时间年月日
-		    together.setHours(16);						//小时	
-		    together.setMinutes(53);					//分钟
+		    together.setFullYear(2020,2, 27); 			//时间年月日
+		    together.setHours(20);						//小时	
+		    together.setMinutes(0);					//分钟
 		    together.setSeconds(0);					//秒前一位
-		    together.setMilliseconds(2);				//秒第二位
+		    together.setMilliseconds(0);				//秒第二位
 
 		    $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
