--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">灿灿，我爱你</span><br>
+                    <div id="code"> <font color="#FF0000"> <span class="say">崔灿，我爱你</span><br>
                       <span class="say"> 我知道我不会甜言蜜语，</span><br>
                       <span class="say"> 但是我会用行动证明一切</span><br>
                       <span class="say">都说陪伴是最长情的告白，</span><br>             
