--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">崔灿，我爱你</span><br>
+                    <div id="code"> <font color="#FF0000"> <span class="say">灿灿，我爱你</span><br>
                       <span class="say"> 我知道我不会甜言蜜语，</span><br>
                       <span class="say"> 但是我会用行动证明一切</span><br>
                       <span class="say">都说陪伴是最长情的告白，</span><br>             
@@ -35,6 +35,7 @@
                               <span class="say">有一种爱一点点就能温馨， </span><br>
                            <span class="say"> 有一个你一相识就难以忘怀，</span><br>
                            <span class="say">有一种心就算不曾见面也会彼此挂念，直至永远 </span><br>
+			   <span class="say">kk,do you love me?</span><br>
                       <span class="say"><span class="space"></span> -- 爱你的77</span> </font>
                           <br />
                           <br />
