--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
             <div id="wrap">
                 <div id="text">
                     <div id="code"> <font color="#FF0000"> <span class="say">灿灿，我爱你</span><br>
-                       <span class="say"> 我知道我不会甜言蜜语，</span><br>
-                       <span class="say"> 但是我会用行动证明一切</span><br>
-                       <span class="say">都说陪伴是最长情的告白，</span><br>             
-                       <span class="say"> 守护是最沉默的陪伴</span><br>
-                       <span class="say">在关注你的那一刻，就决定要守护你</span><br>
-                       <span class="say">也说过会一直陪着你，而我没有食言</span><br>
-                       <span class="say">从最开始陪你到了现在</span><br>
-                       <span class="say">有一种酒一点点就能醉人，</span><br>
-                       <span class="say">有一种爱一点点就能温馨， </span><br>
-                       <span class="say"> 有一个你一相识就难以忘怀，</span><br>
-                       <span class="say">有一种心就算不曾见面也会彼此挂念，直至永远 </span><br>
+                       <span class="say"> 如果我们没有缘分，我想我也不会遇见你，更不会爱上你</span><br>
+                       <span class="say"> 既然遇见了、爱上了，就不会爱上别人</span><br>
+                       <span class="say">茫茫人海中，我的心不大，不是可以装下所有人</span><br>             
+                       <span class="say">每天都会遇到好多人，可是只有你走进了我的心里</span><br>
+                       <span class="say">别人再好再优秀，我也不需要</span><br>
+                       <span class="say">因为你就是最好的</span><br>
+                       <span class="say">数学老师说过：“方程式里一定有等式，等式里不一定有方程式”</span><br>
+                       <span class="say">就像我的世界里一定有你，而你的世界不一定有我</span><br>
+                       <span class="say">现在我想知道，你的世界有没有我</span><br>
 		       <span class="say">kk,do you love me?</span><br>
                        <span class="say"><span class="space"></span> -- 爱你的77</span> </font>
                           <br />
